#^# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
#
#  @software    :    pluie-yaml       <https://git.pluie.org/pluie/lib-yaml>
#  @version     :    0.56
#  @type        :    library
#  @date        :    2018
#  @license     :    GPLv3.0          <http://www.gnu.org/licenses/>
#  @author      :    a-Sansara        <[dev]at[pluie]dot[org]>
#  @copyright   :    pluie.org        <http://www.pluie.org>
#
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#
#  This file is part of pluie-yaml.
#
#  pluie-yaml is free software (free as in speech) : you can redistribute it
#  and/or modify it under the terms of the GNU General Public License as
#  published by the Free Software Foundation, either version 3 of the License,
#  or (at your option) any later version.
#
#  pluie-yaml is distributed in the hope that it will be useful, but WITHOUT
#  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
#  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
#  more details.
#
#  You should have received a copy of the GNU General Public License
#  along with pluie-yaml.  If not, see  <http://www.gnu.org/licenses/>.
#
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #^#

src_files = [
    'src/c/yaml.c',
    'src/vala/Pluie/Io.Reader.vala',
    'src/vala/Pluie/Io.InputChunkStream.vala',
    'src/vala/Pluie/Io.StreamLineMark.vala',
    'src/vala/Pluie/Io.Writter.vala',
    'src/vala/Pluie/Yaml.global.vala',
    'src/vala/Pluie/Yaml.AbstractChild.vala',
    'src/vala/Pluie/Yaml.AbstractNode.vala',
    'src/vala/Pluie/Yaml.Builder.vala',
    'src/vala/Pluie/Yaml.Collection.vala',
    'src/vala/Pluie/Yaml.Config.vala',
    'src/vala/Pluie/Yaml.Dumper.vala',
    'src/vala/Pluie/Yaml.Event.vala',
    'src/vala/Pluie/Yaml.Finder.vala',
    'src/vala/Pluie/Yaml.GeeBuilder.vala',
    'src/vala/Pluie/Yaml.Loader.vala',
    'src/vala/Pluie/Yaml.Mapping.vala',
    'src/vala/Pluie/Yaml.Node.vala',
    'src/vala/Pluie/Yaml.Object.vala',
    'src/vala/Pluie/Yaml.Processor.vala',
    'src/vala/Pluie/Yaml.Register.vala',
    'src/vala/Pluie/Yaml.Root.vala',
    'src/vala/Pluie/Yaml.Scalar.vala',
    'src/vala/Pluie/Yaml.Scanner.vala',
    'src/vala/Pluie/Yaml.Sequence.vala',
    'src/vala/Pluie/Yaml.Tag.vala'
]
